2005-01-25  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_set_tv_out):
	For all the supported TV-Out types, we don't need a restart
	* src/totem-preferences.c: (on_tvout_toggled): don't hard-code
	dxr3 needing a restart

2005-01-25  Mattias Eriksson <snaggen@acc.umu.se>

	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/totem-preferences.c: (on_tvout_toggled):
	  Only show warning if switching to DXR3, since it's not true for
	  NVTV.

2005-01-25  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_signal_idler),
	(bacon_video_widget_set_fullscreen):
	  Small fullscreen fix.

2005-01-25  Mattias Eriksson <snaggen@acc.umu.se>

	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_realize),
	(bacon_video_widget_unrealize), (bacon_video_widget_class_init),
	(bacon_video_widget_fullscreen_mode_available),
	(bacon_video_widget_set_fullscreen):
	  Add NVTV support.
	* src/bacon-video-widget-xine.c:
	(bacon_video_widget_set_fullscreen):
	  Add a g_return_if_fail().

============ Version 0.101

2005-01-24  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.101
	* src/Makefile.am: fix compilation with out-of-tree build dir

2005-01-24  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (totem_playlist_clear_with_compare): Don't
	generate a current-removed event if we didn't remove any items
	(Closes: #153209)

2005-01-24  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* data/.cvsignore: upd
	* src/metadata-test.c: (main): set the right program name

2005-01-24  Shaun McCance  <shaunm@gnome.org>

	* src/totem-pl-parser.c: (totem_pl_parser_add_directory):
	  escape filenames when constucting URIs (#165049)

2005-01-20  Bastien Nocera  <hadess@hadess.net>

	* src/totem-interface.c: (totem_interface_error_dialog):