@@ -1,3 +1,10 @@
+2005-01-25  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* src/bacon-video-widget-gst.c: (bacon_video_widget_signal_idler),
+	(group_switch), (parse_stream_info), (stream_info_set),
+	(state_change), (bacon_video_widget_new):
+	  Notify delayed stream-information availability.
+
 2005-01-25  Bastien Nocera  <hadess@hadess.net>
 
 	* src/bacon-video-widget-gst.c: (bacon_video_widget_set_tv_out):
